# boilerplot

./: LICENSE.txt  Pipfile  README.md  example.ipynb  pyproject.toml  setup.py
boilerplot/: iedm.mplstyle  ieeetran.mplstyle  presentation.mplstyle  science.mplstyle
examples/: example.ipynb  layout.ipynb  styles.ipynb
