[tool.poetry]
name = "boilerplot"
version = "0.1.0"
description = "Boilerplate for scientific matplotlib plots"
authors = ["Luca Fehlings <fehlings97@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.11,<3.13"
matplotlib = "^3.8.0"

[tool.poetry.group.dev.dependencies]
jupyter = "^1.0.0"
numpy = "^1.26.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
