[build-system]
requires = ["setuptools", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[project]
name = "boilerplot"
version = "0.2.0"
authors = [
    {name = "Luca Fehlings", email = "fehlings97@gmail.com"},
]
description = "Boilerplate for scientific matplotlib plots"
readme = "README.md"
license = {file = "LICENSE.txt"}
requires-python = ">=3.8"
dependencies = [
    "matplotlib",
]

[project.optional-dependencies]
jupyter = ["jupyter", "numpy"]

[tool.setuptools]
packages = ["boilerplot"]
